fixed 5-day forecast card header visual overlap (width) and adjusted font size for card body text

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,6 +90,7 @@ footer a:hover {
 
 .card-text {
   margin: 1px;
+  font-size: 14px;
 }
 
 .card-header-today {
